addons/mass_mailing/static/src/iframe_assets/iframe_style.scss
html:has(.o_layout, .o_basic_theme) {
    &:has(body:not(.o_mass_mailing_iframe_fullscreen)) {
        height: auto !important;
    }

    body:not(.o_mass_mailing_iframe_fullscreen, .o_mass_mailing_iframe_mobile) {
        height: auto !important;
        .note-editable {
            overflow: visible;
            height: auto;
            .o_layout {
                min-height: 0 !important;
            }
        }
    }

    body {
        &.o_mass_mailing_iframe_fullscreen, &.o_mass_mailing_iframe_mobile {
            .note-editable {
                overflow: auto;
                height: 100%;
            }
        }
        &.o_mass_mailing_iframe_fullscreen {
            .o_layout {
                display: grid;
                align-items: center;
            }
            .o_layout > .container {
                padding-bottom: 2%;
            }
        }
        &.o_mass_mailing_with_builder {
            background-color: transparent;
        }
        .note-editable {
            padding: 0;
            border: none;
        }
        .o_mass_mailing_value {
            overflow-wrap: break-word !important;
        }
        .o_mass_mailing_value ~ .o_loading_screen {
            display: none !important;
        }

        .o_layout.o_basic_theme {
            padding: 16px;
        }
    }

    .container {
        padding-left: 0;
        padding-right: 0;
    }
}

:host(.o_mail_favorite_preview) {
    .o_layout.o_basic_theme {
        padding: 16px;
    }
    .o_layout .o_mail_wrapper {
        max-width: unset;
    }
    .container {
        padding-left: 0;
        padding-right: 0;
    }
}

html:has(.o_layout) {
    .editor_enable .o_mail_wrapper_td.oe_empty:empty {
        cursor: pointer;
        background-color: rgba(1, 186, 210, 0.5) !important;
        &:not(:focus) {
            &:before {
                content: attr(data-editor-message);
                pointer-events: none;
                color: white;
            }
        }
        &:hover {
            background-color: rgba(1, 186, 210, 0.7) !important;
        }
        width: 100% - 2 * $-editor-messages-margin-x;
        text-align: center;
        font-size: 20px;
        display: block;
        padding: 12px 0;
        margin: 20px $-editor-messages-margin-x;

        &:not(:focus) {
            @include o-editor-messages;

            &:before {
                pointer-events: none;
            }
        }
    }
}

body {
    // Set frontend direction that will be flipped with
    // rtlcss for right-to-left text direction.
    direction: ltr;
}

